<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="32dp"
    android:background="@android:color/white"
    android:padding="24dp"
    app:circularflow_defaultRadius="12dp"
    tools:context=".MainActivity">

    <!-- Titulo  -->
    <TextView
        android:id="@+id/tvTittle"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvTittle_login"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <!-- Email -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusTopStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:startIconDrawable="@android:drawable/ic_menu_send"
        android:layout_marginTop="24dp"
        android:hint="@string/txtEmail"

        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTittle" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Contraseña -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/txtPassword"

        app:boxBackgroundMode="outline"
        app:boxCornerRadiusTopStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp"

        app:startIconDrawable="@android:drawable/ic_lock_lock"
        app:endIconMode="password_toggle"

        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btnLogin"
        android:textAllCaps="false"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="@android:color/white"
        app:cornerRadius="20dp"

        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"

        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="16dp"

        >

    </com.google.android.material.button.MaterialButton>

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:clickable="true"
        android:focusable="true"
        android:text="@string/lblRegister"

        android:textColor="#3D0447"
        android:textStyle="bold"

        android:minHeight="48dp"
        android:minWidth="48dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:clickable="true"
        android:focusable="true"
        android:text="@string/lblForgotPass"

        android:minWidth="48dp"
        android:minHeight="48dp"


        android:textColor="#3D0447"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.783"
        app:layout_constraintStart_toStartOf="@+id/tvRegister"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />



</androidx.constraintlayout.widget.ConstraintLayout>